test/conformance/chainsaw/policy-validation/policy/assert/bad-context-name.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: bad-context-name
spec:
  rules:
  - name: test
    match:
      all:
      - resources:
          kinds:
            - Pod
    context:
    - name: bad-name
      variable:
        value: dummy
    validate:
      failureAction: Enforce
      message: "pod must have an env label"
      assert:
        object:
          metadata:
            labels:
              env: {}
