test/conformance/chainsaw/policy-validation/policy/assert/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: assert-validation
spec:
  concurrent: false
  steps:
  - try:
    - create:
        file: ok.yaml
  - try:
    - create:
        file: no-foreach.yaml
        bindings:
        - name: errPattern
          value: |-
            *path: spec.rules[0].validate..: only one of pattern, anyPattern, deny, foreach, cel can be specified
        expect:
        - check:
            (wildcard($errPattern, $error)): true
